tests/baselines/reference/exportAlreadySeen(strict=true).errors.txt
exportAlreadySeen.ts(2,12): error TS1030: 'export' modifier already seen.
exportAlreadySeen.ts(3,12): error TS1030: 'export' modifier already seen.
exportAlreadySeen.ts(5,12): error TS1030: 'export' modifier already seen.
exportAlreadySeen.ts(6,16): error TS1030: 'export' modifier already seen.
exportAlreadySeen.ts(7,16): error TS1030: 'export' modifier already seen.
exportAlreadySeen.ts(12,12): error TS1030: 'export' modifier already seen.
exportAlreadySeen.ts(12,23): error TS7005: Variable 'x' implicitly has an 'any' type.
exportAlreadySeen.ts(13,12): error TS1030: 'export' modifier already seen.
exportAlreadySeen.ts(13,28): error TS7010: 'f', which lacks return-type annotation, implicitly has an 'any' return type.
exportAlreadySeen.ts(15,12): error TS1030: 'export' modifier already seen.
exportAlreadySeen.ts(16,16): error TS1030: 'export' modifier already seen.
exportAlreadySeen.ts(17,16): error TS1030: 'export' modifier already seen.


==== exportAlreadySeen.ts (12 errors) ====
    module M {
        export export var x = 1;
               ~~~~~~
!!! error TS1030: 'export' modifier already seen.
        export export function f() { }
               ~~~~~~
!!! error TS1030: 'export' modifier already seen.
    
        export export module N {
               ~~~~~~
!!! error TS1030: 'export' modifier already seen.
            export export class C { }
                   ~~~~~~
!!! error TS1030: 'export' modifier already seen.
            export export interface I { }
                   ~~~~~~
!!! error TS1030: 'export' modifier already seen.
        }  
    }
    
    declare module A {
        export export var x;
               ~~~~~~
!!! error TS1030: 'export' modifier already seen.
                          ~
!!! error TS7005: Variable 'x' implicitly has an 'any' type.
        export export function f()
               ~~~~~~
!!! error TS1030: 'export' modifier already seen.
                               ~
!!! error TS7010: 'f', which lacks return-type annotation, implicitly has an 'any' return type.
    
        export export module N {
               ~~~~~~
!!! error TS1030: 'export' modifier already seen.
            export export class C { }
                   ~~~~~~
!!! error TS1030: 'export' modifier already seen.
            export export interface I { }
                   ~~~~~~
!!! error TS1030: 'export' modifier already seen.
        }
    }